--- a/ConcreteCloud/Info.plist
+++ b/ConcreteCloud/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+		<string>remote-notification</string>
+		<string>location</string>
+	</array>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>iosamap</string>
@@ -15,8 +21,6 @@
 	</dict>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>应用后台一直使用您的定位</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>请求使用您的位置</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>请求访问你的麦克风</string>
 	<key>NSCameraUsageDescription</key>
@@ -36,9 +40,9 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.9 Beta</string>
+	<string>2.1 Beta</string>
 	<key>CFBundleVersion</key>
-	<string>19</string>
+	<string>21</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
